# langgraph_playbook

./: .gitignore  README.md  langgraph_introduction.md  main.py  pyproject.toml  typeddict_vs_pydantic.md
notebooks/: langgraph0_email_workflow.py  pydantic01.ipynb  react0.ipynb
notebooks/.virtual_documents/: react0.ipynb
